--- a/.themes/classic/source/index.html
+++ b/.themes/classic/source/index.html
@@ -20,6 +20,7 @@ layout: default
     {% endif %}
   </div>
 </div>
+{% unless page.sidebar == false %}
 <aside class="sidebar">
   {% if site.blog_index_asides.size %}
     {% include_array blog_index_asides %}
@@ -27,3 +28,4 @@ layout: default
     {% include_array default_asides %}
   {% endif %}
 </aside>
+{% endunless %}
